<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ui.view.settings.SettingsFragment">

        <include
            android:id="@+id/toolBar"
            layout="@layout/toolbar" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="16dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivAppIcon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    tools:src="@mipmap/ic_launcher" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/heebo_bold"
                    android:letterSpacing="0.1"
                    android:text="@string/app_name"
                    android:textColor="@color/theme_primary"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="?actionBarSize">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/developed_maintained_by"
                        android:textColor="@color/theme_secondary"
                        app:fontFamily="@font/heebo_medium" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        android:text="@string/tridhya_tech_ltd"
                        android:textColor="@color/theme_primary"
                        app:fontFamily="@font/heebo_bold" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_us"
                        android:textColor="@color/theme_secondary"
                        app:fontFamily="@font/heebo_medium" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        android:autoLink="email"
                        android:text="@string/info_tridhyatech_com"
                        android:textColor="@color/theme_primary"
                        app:fontFamily="@font/heebo_bold" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/application_version"
                        android:textColor="@color/theme_secondary"
                        app:fontFamily="@font/heebo_medium" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvVersion"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        android:textColor="@color/theme_primary"
                        app:fontFamily="@font/heebo_bold"
                        tools:text="1.0" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:autoLink="web"
            android:text="@string/www_tridhyatech_com"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>