<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_rounded_bottomsheet"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnFontSelection"
        style="@style/settingsButtonStyle"
        android:layout_margin="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/reading_options"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F2F2F2" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginVertical="14dp"
            android:text="@string/reading_mode"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_switch"
            android:padding="2.5dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchReadingMode"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:checked="true"
                android:textColor="@color/white"
                android:thumb="@drawable/thumb_selector"
                app:switchMinWidth="100dp"
                app:track="@drawable/track_selector" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tvSwitchYes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/swipe"
                    android:textColor="@color/theme_primary"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvSwitchNo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/scroll"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </RelativeLayout>
    </RelativeLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:padding="4dp"
            android:text="@string/automatic_scrolling"
            android:textSize="14sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchAutomaticScrolling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:checked="true"
            android:padding="4dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:paddingHorizontal="20dp"
        android:paddingBottom="40dp"
        android:text="@string/automatic_scrolling_is_the_scrolling_of_the_text_down_to_no_touch_in_the_opening_screen_only_in_scrolling_reading_mode_ntouching_the_center_of_the_screen_will_stop_the_auto_scroll"
        android:textSize="14sp" />

</androidx.appcompat.widget.LinearLayoutCompat>