<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_rounded_bottomsheet"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnFontSelection"
        style="@style/settingsButtonStyle"
        android:layout_margin="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:drawableTint="@color/black"
        android:text="@string/font_selection"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F2F2F2" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/tvFontSansSerif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSansSerif"
            style="@style/fontTextView"
            android:layout_width="90dp"
            android:fontFamily="sans-serif"
            android:text="@string/sans_serif" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDescSansSerif"
            style="@style/fontTextView"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:singleLine="true"
            android:text="@string/in_recent_years_no_week_goes_by" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F2F2F2" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/tvFontSerif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSerif"
            style="@style/fontTextView"
            android:layout_width="90dp"
            android:fontFamily="serif"
            android:text="@string/serif" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDescSerif"
            style="@style/fontTextView"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:singleLine="true"
            android:text="@string/in_recent_years_no_week_goes_by" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F2F2F2" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/tvFontMonospace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMono"
            style="@style/fontTextView"
            android:layout_width="90dp"
            android:fontFamily="monospace"
            android:text="@string/monospace" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDescMono"
            style="@style/fontTextView"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:singleLine="true"
            android:text="@string/in_recent_years_no_week_goes_by" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F2F2F2" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/tvFontCursive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCursive"
            style="@style/fontTextView"
            android:layout_width="90dp"
            android:fontFamily="cursive"
            android:text="@string/cursive" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDescCursive"
            style="@style/fontTextView"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:fontFamily="cursive"
            android:singleLine="true"
            android:text="@string/in_recent_years_no_week_goes_by" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F2F2F2" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/tvFontDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDefault"
            style="@style/fontTextView"
            android:layout_width="90dp"
            android:text="@string/_default" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDescDefault"
            style="@style/fontTextView"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/in_recent_years_no_week_goes_by" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F2F2F2" />

</androidx.appcompat.widget.LinearLayoutCompat>