<?xml version="1.0" encoding="utf-8"?><!-- res/layout/custom_password_dialog.xml -->
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded_dialog"
    android:orientation="vertical"
    android:layout_marginHorizontal="24dp"
    android:padding="14dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/enter_the_book_password"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:fontFamily="@font/young_serif_regular"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/v_ic_close" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingHorizontal="14dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordEditText"
            style="@style/EditTextStyle"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivPassVisible"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/v_ic_hide_password"
            app:layout_constraintBottom_toBottomOf="@id/passwordEditText"
            app:layout_constraintEnd_toEndOf="@id/passwordEditText"
            app:layout_constraintTop_toTopOf="@id/passwordEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:padding="16dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:visibility="gone"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <Button
        android:id="@+id/unlockBtn"
        style="@style/buttonStyle"
        android:layout_marginTop="16dp"
        android:text="@string/unlock_book"
        android:textSize="16sp"
        android:paddingVertical="12dp" />

</androidx.appcompat.widget.LinearLayoutCompat>
