<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_rounded_bottomsheet"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnFontSelection"
        style="@style/settingsButtonStyle"
        android:layout_margin="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/advanced_settings"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F2F2F2" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingHorizontal="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:padding="4dp"
            android:text="@string/screen_rotation_lock"
            android:textSize="14sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchScreenRotation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:thumbTint="@color/theme_primary"
            android:checked="true" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingHorizontal="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:padding="4dp"
            android:text="@string/browsing_by_clicking_on_margins"
            android:textSize="14sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchBrowsing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:thumbTint="@color/theme_primary"
            android:checked="true" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingHorizontal="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/line_spacing"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekBarLineSpacing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/white"
            android:max="4"
            android:padding="4dp"
            android:progress="1"
            android:progressTint="@color/theme_primary"
            android:rotationY="180"
            android:splitTrack="false"
            android:thumb="@drawable/v_ic_custom_thumb_settings" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingHorizontal="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/space_between_words"
            android:textSize="14sp" />

        <SeekBar
            android:id="@+id/seekBarWordSpacing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:padding="4dp"
            android:progressTint="@color/black"
            android:rotationY="180"
            android:splitTrack="false"
            android:thumb="@drawable/v_ic_custom_thumb_settings" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingHorizontal="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/spacing_from_the_sides"
            android:textSize="14sp" />

        <SeekBar
            android:id="@+id/seekBarSpacingFromSide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:max="100"
            android:padding="4dp"
            android:progress="50"
            android:progressTint="@color/black"
            android:rotationY="180"
            android:splitTrack="false"
            android:thumb="@drawable/v_ic_custom_thumb_settings" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:paddingHorizontal="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:padding="4dp"
            android:text="@string/lock_book"
            android:textSize="14sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchBookLock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:thumbTint="@color/theme_primary"
            android:padding="4dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>